feat : Add swagger documentation

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -15,23 +15,23 @@
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         이다은
-                        <a href="https://github.com/da-nyee"><img src="/../../static/images/github-fill.png" alt="이다은_깃헙" /></a>
-                        <a href="https://www.instagram.com/da_nyee/"><img src="/../../static/images/instagram-fill.png" alt="이다은_인스타" /></a>
+                        <a href="https://github.com/da-nyee"><img src="/static/images/github-fill.png" alt="이다은_깃헙" /></a>
+                        <a href="https://www.instagram.com/da_nyee/"><img src="/static/images/instagram-fill.png" alt="이다은_인스타" /></a>
                     </h4>
                     </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         전현우
-                        <a href="https://github.com/HyeonWuJeon"><img src="/../../static/images/github-fill.png" alt="전현우_깃헙" /></a>
-                        <a href="https://www.instagram.com/chun1307/"><img src="/../../static/images/instagram-fill.png" alt="전현우_인스타" /></a>
+                        <a href="https://github.com/HyeonWuJeon"><img src="/static/images/github-fill.png" alt="전현우_깃헙" /></a>
+                        <a href="https://www.instagram.com/chun1307/"><img src="/static/images/instagram-fill.png" alt="전현우_인스타" /></a>
                     </h4>
                 </div>
                 <div class="col-xl-2 col-sm-6 col-md-3 mb-4 mb-xl-0 single-footer-widget">
                     <h4>
                         황승환
-                        <a href="https://github.com/workhardslave"><img src="/../../static/images/github-fill.png" alt="황승환_깃헙" /></a>
-                        <a href="https://www.instagram.com/workhardslave/"><img src="/../../static/images/instagram-fill.png" alt="황승환_인스타" /></a>
+                        <a href="https://github.com/workhardslave"><img src="/static/images/github-fill.png" alt="황승환_깃헙" /></a>
+                        <a href="https://www.instagram.com/workhardslave/"><img src="/static/images/instagram-fill.png" alt="황승환_인스타" /></a>
                     </h4>
                 </div>
             </div>
@@ -49,22 +49,22 @@
 
         <!-- jquery plugins here-->
         <!-- jquery -->
-        <script src="/../static/leopet/js/jquery-1.12.1.min.js"></script>
+        <script src="/static/leopet/js/jquery-1.12.1.min.js"></script>
         <!-- popper js -->
-        <script src="/../static/leopet/js/popper.min.js"></script>
+        <script src="/static/leopet/js/popper.min.js"></script>
         <!-- bootstrap js -->
-        <script src="/../static/leopet/js/bootstrap.min.js"></script>
+        <script src="/static/leopet/js/bootstrap.min.js"></script>
         <!-- counterup js -->
-        <script src="/../static/leopet/js/jquery.counterup.min.js"></script>
+        <script src="/static/leopet/js/jquery.counterup.min.js"></script>
         <!-- waypoints js -->
-        <script src="/../static/leopet/js/waypoints.min.js"></script>
+        <script src="/static/leopet/js/waypoints.min.js"></script>
         <!-- easing js -->
-        <script src="/../static/leopet/js/jquery.magnific-popup.js"></script>
+        <script src="/static/leopet/js/jquery.magnific-popup.js"></script>
         <!-- particles js -->
-        <script src="/../static/leopet/js/owl.carousel.min.js"></script>
+        <script src="/static/leopet/js/owl.carousel.min.js"></script>
         <!-- custom js -->
-        <script src="/../static/leopet/js/custom.js"></script>
+        <script src="/static/leopet/js/custom.js"></script>
         <!-- circle progress bar js -->
-        <script src="/../static/js/plugin.js"></script>
+        <script src="/static/js/plugin.js"></script>
     </footer>
 </html>
